# python-project-52

./: Makefile  README.md  main.py  manage.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
task_manager/: auth_views.py  rollbar_middleware.py  rollbar_test_views.py  settings.py  urls.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  tests_filters.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  update.html
task_manager/templates/statuses/: create.html  update.html
task_manager/templates/tasks/: update.html
task_manager/templates/users/: delete.html  index.html  update.html
task_manager/users/: apps.py  forms.py  tests.py  urls.py  views.py
templates/: base.html  index.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/registration/: login.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  index.html  show.html  update.html
templates/users/: create.html  delete.html  index.html  update.html
